Bug 157136 - Some Word's plain text content controls import with wrong properties
Summary: Some Word's plain text content controls import with wrong properties
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:24.2.0 target:7.6.2
Keywords:
Depends on:
Blocks: DOCX-Content_Control
  Show dependency treegraph
 
Reported: 2023-09-07 12:06 UTC by Mike Kaganski
Modified: 2023-09-19 10:57 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Two green content controls (21.97 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2023-09-07 12:06 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2023-09-07 12:06:19 UTC
Created attachment 189413 [details]
Two green content controls

The attached DOCX contains two plain text content controls; they use the default "Placeholder Text" character style. The style itself is modified to have a greenish highlight. The difference between the controls is that the first one is a block control (has a whole paragraph as its content), while the second is contained inside a paragraph, and its content is a run.

When opened in Writer, the first control does not have the expected greenish color; while the second has it correctly.
Comment 1 Mike Kaganski 2023-09-07 16:35:35 UTC
https://gerrit.libreoffice.org/c/core/+/156675
Comment 2 Commit Notification 2023-09-07 19:16:27 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b7a5c2502434d3da92d1fbcad528cabeb61a2719

tdf#157136: apply top context properties to the text input field

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2023-09-11 11:21:01 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/1b69007a820ac5ca42e237b85744ff4143abfe57

tdf#157136: apply top context properties to the text input field

It will be available in 7.6.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2023-09-19 10:57:11 UTC
Verified in

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 0c4913e03e8427a576138601958f2dbf13b8c37b
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

@Mike, thanks for fixing this issue!!