tdf#157136: apply top context properties to the text input field

Change-Id: Ie3877811e482c1ec395a00ec6bf67155220b2b64
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/156675
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/156692
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>